--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
