--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/eslint-plugin": "1.1.23",
     "@vue/eslint-config-prettier": "^10.1.0",
@@ -32,7 +34,8 @@
     "prettier": "^3.3.3",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8",
-    "vitest": "^2.1.8"
+    "vitest": "^2.1.8",
+    "vue-eslint-parser": "^10.1.1"
   },
   "lint-staged": {
     "**/*.*": [
