--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
+    "@eslint/js": "^9.22.0",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vitest/eslint-plugin": "1.1.23",
-    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vitest/eslint-plugin": "^1.1.23",
+    "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/test-utils": "^2.4.6",
-    "eslint": "^9.14.0",
-    "eslint-plugin-vue": "^9.30.0",
+    "eslint": "^9.22.0",
+    "eslint-plugin-vue": "^9.33.0",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
     "jsdom": "^25.0.1",
