--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.8.3",
-    "mapbox-gl": "^3.11.0",
+    "mapbox-gl": "^2.14.1",
     "md5": "^2.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -35,9 +35,10 @@
     "jsdom": "^25.0.1",
     "lint-staged": "^15.3.0",
     "prettier": "^3.3.3",
-    "vite": "^6.0.5",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.2",
     "vite-plugin-vue-devtools": "^7.6.8",
-    "vitest": "^2.1.8",
+    "vitest": "^3.1.1",
     "vue-eslint-parser": "^10.1.1"
   },
   "lint-staged": {
